fixed align for text and several photos

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,12 @@ h2 {
   font-family: 'Montserrat';
 }
 
+h3 {
+  font-family: 'Montserrat';
+  font-weight: bold;
+  text-align: left;
+}
+
 .p2 {
   font-family: 'Montserrat';
   font-size: 9px;
@@ -52,9 +58,15 @@ h2 {
 	 height:20px;
 }
 
-.imgtest{
-  margin: 0 auto;
 
+.img-long{
+  margin: 0 auto;
+  width: 100%;
+}
+
+.img-wide{
+  width: 100%;
+  margin: 0 auto;
 }
 /* Icon 1 */
 
